Tabelas Criadas no Documento

--- a/first_follow.ipynb
+++ b/first_follow.ipynb
@@ -1670,172 +1670,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['S', '{ACB,CbB,Ba}', '{b,h,g,d,λ,a}', '{$}']"
-      ]
-     },
-     "execution_count": 216,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(df.loc[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 213,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Variavel\n",
-      "Producao\n",
-      "First\n",
-      "Follow\n"
-     ]
-    }
-   ],
-   "source": [
-    "for row in df:\n",
-    "    print(df.loc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 219,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 Geek 1\n",
-      "2 Geek 2\n",
-      "3 Geek 3\n"
-     ]
-    }
-   ],
-   "source": [
-    "data = (\n",
-    "    (1, 'Geek 1'),\n",
-    "    (2, 'Geek 2'),\n",
-    "    (3, 'Geek 3')\n",
-    ")\n",
-    "\n",
-    "for id, name in data:\n",
-    "  \n",
-    "    print(id,name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 225,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "0 S\n",
-      "1 {ACB,CbB,Ba}\n",
-      "2 {b,h,g,d,λ,a}\n",
-      "3 {$}\n",
-      "1\n",
-      "0 A\n",
-      "1 {da,BC}\n",
-      "2 {d,g,λ,h}\n",
-      "3 {$,g,h}\n",
-      "2\n",
-      "0 B\n",
-      "1 {g,λ}\n",
-      "2 {g,λ}\n",
-      "3 {$,g,a,h}\n",
-      "3\n",
-      "0 C\n",
-      "1 {h,λ}\n",
-      "2 {h,λ}\n",
-      "3 {$,g,h,b}\n"
-     ]
-    }
-   ],
-   "source": [
-    "for index, row in df.iterrows():\n",
-    "    print(index)\n",
-    "    for idx, elem in enumerate(row):\n",
-    "        print(idx, elem)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import docx NOT python-docx\n",
-    "import docx\n",
+    "def criar_tabela(df):\n",
+    "    ### Adicionar Tabela de First - Follow\n",
+    "    table = doc.add_table(rows=1, cols=len(df.columns))\n",
     "\n",
-    "# Create an instance of a word document\n",
-    "doc = docx.Document()\n",
+    "    ### Indices\n",
+    "    row = table.rows[0].cells\n",
+    "    for idx, coluna in enumerate(df.columns):\n",
+    "        row[idx].text = coluna\n",
     "\n",
-    "# Add a Title to the document\n",
-    "doc.add_heading('GeeksForGeeks', 0)\n",
+    "    ### Valores\n",
     "\n",
-    "# Table data in a form of list\n",
-    "data = (\n",
-    "\t(1, 'Geek 1'),\n",
-    "\t(2, 'Geek 2'),\n",
-    "\t(3, 'Geek 3')\n",
-    ")\n",
+    "    for index, linha in df.iterrows():\n",
+    "        # Adding a row and then adding data in it.\n",
+    "        row = table.add_row().cells\n",
     "\n",
-    "# Creating a table object\n",
-    "table = doc.add_table(rows=1, cols=2)\n",
-    "\n",
-    "# Adding heading in the 1st row of the table\n",
-    "row = table.rows[0].cells\n",
-    "row[0].text = 'Id'\n",
-    "row[1].text = 'Name'\n",
-    "row[2].text = 'Name'\n",
-    "row[3].text = 'Name'\n",
-    "\n",
-    "# Adding data from the list to the table\n",
-    "for id, name in data:\n",
-    "\n",
-    "\t# Adding a row and then adding data in it.\n",
-    "\trow = table.add_row().cells\n",
-    "\t# Converting id to string as table can only take string input\n",
-    "\trow[0].text = str(id)\n",
-    "\trow[1].text = name\n",
-    "\n",
-    "# Now save the document to a location\n",
-    "doc.save('gfg.docx')\n"
+    "        for idx, elem in enumerate(linha):\n",
+    "            row[idx].text = elem"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 240,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "id: 0, coluna: Variavel\n",
-      "id: 1, coluna: Producao\n",
-      "id: 2, coluna: First\n",
-      "id: 3, coluna: Follow\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import docx NOT python-docx\n",
     "import docx\n",
@@ -1852,37 +1714,31 @@
     "doc.add_paragraph(f'{codigo_entrada}')\n",
     "\n",
     "doc.add_heading('Tabela First - Follow', 3)\n",
+    "criar_tabela(df)\n",
     "\n",
+    "doc.add_heading('Tabela Preditiva', 3)\n",
+    "criar_tabela(df_1)\n",
     "\n",
+    "doc.add_heading('Tabela Teste', 3)\n",
+    "doc.add_paragraph(f'Palavra de teste: {palavra}')\n",
+    "criar_tabela(df_2)\n",
     "\n",
     "doc.save('report.docx')"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def criar_tabela(df):\n",
-    "    ### Adicionar Tabela de First - Follow\n",
-    "    table = doc.add_table(rows=1, cols=len(df.columns))\n",
-    "\n",
-    "    ### Indices\n",
-    "    row = table.rows[0].cells\n",
-    "    for idx, coluna in enumerate(df.columns):\n",
-    "        print(f'id: {idx}, coluna: {coluna}')\n",
-    "        row[idx].text = coluna\n",
-    "\n",
-    "    ### Valores\n",
-    "\n",
-    "    for index, linha in df.iterrows():\n",
-    "        # Adding a row and then adding data in it.\n",
-    "        row = table.add_row().cells\n",
-    "\n",
-    "        for idx, elem in enumerate(linha):\n",
-    "            row[idx].text = elem"
-   ]
+   "source": []
   }
  ],
  "metadata": {
