--- a/loop_first_follow.ipynb
+++ b/loop_first_follow.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "data_atual = datetime.datetime.now().strftime(\"%d/%m/%Y, %H:%M:%S\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def criar_tabela(df):\n",
+    "    ### Adicionar Tabela de First - Follow\n",
+    "    table = doc.add_table(rows=1, cols=len(df.columns))\n",
+    "    # Adding style to a table\n",
+    "    table.style = 'Light Grid Accent 1'\n",
+    "    ### Indices\n",
+    "    row = table.rows[0].cells\n",
+    "    for idx, coluna in enumerate(df.columns):\n",
+    "        row[idx].text = coluna\n",
+    "\n",
+    "    ### Valores\n",
+    "\n",
+    "    for index, linha in df.iterrows():\n",
+    "        # Adding a row and then adding data in it.\n",
+    "        row = table.add_row().cells\n",
+    "\n",
+    "        for idx, elem in enumerate(linha):\n",
+    "            row[idx].text = elem\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<docx.text.paragraph.Paragraph at 0x1eccf45e2e0>"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import docx NOT python-docx\n",
+    "import docx\n",
+    "  \n",
+    "# Create an instance of a word document\n",
+    "doc = docx.Document()\n",
+    "  \n",
+    "# Add a Title to the document\n",
+    "doc.add_heading('Relatório Tabela Preditiva', 0)\n",
+    "doc.add_paragraph(f'Relatório Automático Gerado em {data_atual}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +215,8 @@
     "            print('#'*100)\n",
     "    except Exception as e:\n",
     "        print(f'Erro no arquivo: {file_name_externo} -> {e}')\n",
-    "\n"
+    "\n",
+    "doc.save('report.docx')\n"
    ]
   },
   {
