Consertado Bug e saida melhorada

--- a/first_follow.ipynb
+++ b/first_follow.ipynb
@@ -1103,6 +1103,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "\n",
     "df_2 = pd.DataFrame(columns=['Pilha','Entrada','Producao'])\n",
@@ -1136,6 +1143,7 @@
     "    elemento_entrada = lista_entrada[0]\n",
     "\n",
     "    if elemento_entrada not in alfabeto:\n",
+    "        df_2.loc[i] = [juntar_lista(lista_pilha),juntar_lista(lista_entrada),producao]\n",
     "        mensagem = 'Elemento não corresponde ao Alfabeto'\n",
     "        print(mensagem)\n",
     "        break\n",
@@ -1145,18 +1153,24 @@
     "        pop_entrada = True    \n",
     "        elemento_entrada = lista_entrada[0]\n",
     "        if elemento_analisado in variaveis_nao_terminais:        \n",
-    "            producao = df_1.loc[elemento_analisado][elemento_entrada]\n",
+    "            producao = df_1.loc[elemento_analisado][elemento_entrada]            \n",
     "        else:\n",
     "            producao = ''    \n",
     "    else:\n",
     "        if (elemento_analisado in variaveis_nao_terminais):\n",
-    "           producao = df_1.loc[elemento_analisado][elemento_entrada]\n",
+    "            if elemento_entrada not in df_1.columns:\n",
+    "                df_2.loc[i] = [juntar_lista(lista_pilha),juntar_lista(lista_entrada),producao]\n",
+    "                mensagem = \"Não foi possível realizar a palavra, não há producão que gere entrada\"\n",
+    "                print(mensagem)\n",
+    "                break\n",
+    "            else:\n",
+    "                producao = df_1.loc[elemento_analisado][elemento_entrada]\n",
     "        else:\n",
     "            df_2.loc[i] = [juntar_lista(lista_pilha),juntar_lista(lista_entrada),producao]\n",
     "            mensagem = \"Não foi possível realizar a palavra, pilha não possui não-terminais\"\n",
     "            print(mensagem)\n",
     "            break\n",
-    "        if (len(producao) == 1):\n",
+    "        if (len(producao) == 1):            \n",
     "            df_2.loc[i] = [juntar_lista(lista_pilha),juntar_lista(lista_entrada),producao]\n",
     "            mensagem = \"Não foi possível realizar a palavra, não há producão que gere entrada\"\n",
     "            print(mensagem)\n",
@@ -1169,6 +1183,13 @@
     "\n",
     "df_2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
