--- a/loop_first_follow.ipynb
+++ b/loop_first_follow.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,16 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<docx.text.paragraph.Paragraph at 0x29345238640>"
+       "<docx.text.paragraph.Paragraph at 0x29345453070>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -107,6 +107,7 @@
       "B : {*FB,λ}\n",
       "F : {(E),x}\n",
       "Tabela Preditiva Gerada\n",
+      "Elemento não corresponde ao Alfabeto\n",
       "Tabela de Testes Gerada\n",
       "####################################################################################################\n",
       "Executando arquivo: exemplo2.txt\n",
@@ -116,6 +117,7 @@
       "B : {g,λ}\n",
       "C : {h,λ}\n",
       "Tabela Preditiva Gerada\n",
+      "Não foi possível realizar a palavra, pilha não possui não-terminais\n",
       "Tabela de Testes Gerada\n",
       "####################################################################################################\n",
       "Executando arquivo: exemplo3.txt\n",
@@ -127,6 +129,7 @@
       "E : {g,λ}\n",
       "F : {f,λ}\n",
       "Tabela Preditiva Gerada\n",
+      "Não foi possível realizar a palavra, não há producão que gere entrada\n",
       "Tabela de Testes Gerada\n",
       "####################################################################################################\n",
       "Executando arquivo: input_a.txt\n",
